--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script type="text/javascript" src="/js/materialize.min.js"></script>
   <link rel="manifest" href="/manifest.json">
   <!-- ios support -->
-  <link rel="apple-touch-icon" href="/icons/icon-96x96.png">
+  <link rel="apple-touch-icon" href="/img/icons/icon-96x96.png">
   <meta name="apple-mobile-web-app-status-bar" content="#aa7700">
   <meta name="theme-color" content="#ffe1c4">
   <title>Ninja Food</title>
